--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -1,15 +1,5 @@
 % Encoding: UTF-8
 
-@Book{2015,
-  title     = {Illuminating Dark Networks: The Study of Clandestine Groups and Organizations},
-  publisher = {Cambridge University Press},
-  year      = {2015},
-  author    = {Gerdes, L. M.},
-  doi       = {10.1017/cbo9781316212639},
-  owner     = {Vincent},
-  timestamp = {2020.07.23},
-}
-
 @Book{Aarne1961,
   title     = {The types of the folktale: a classification and bibliography},
   publisher = {Academia Scientarum Fennica},
@@ -1474,6 +1464,20 @@
   timestamp = {2010.06.03},
 }
 
+@Article{Arenas2006a,
+  author    = {Arenas, A. and Díaz-Guilera, A. and Peréz-Vicente, C. J.},
+  title     = {Synchronization reveals topological scales in complex networks},
+  journal   = {Physical Review Letters},
+  year      = {2006},
+  volume    = {96},
+  number    = {11},
+  pages     = {114102},
+  doi       = {10.1103/PhysRevLett.96.114102},
+  groups    = {Synchronization - Consensus},
+  owner     = {Vincent},
+  timestamp = {2010.11.19},
+}
+
 @Article{Arendt2014,
   author    = {Arendt, D. L. and Blaha, L. M.},
   title     = {SVEN: Informative Visual Representation of Complex Dynamic Structure},
@@ -2892,6 +2896,18 @@
   url       = {http://www.sc.ehu.es/acwbecae/ikerkuntza/these/thesis.pdf},
 }
 
+@Article{Ben-Hur2001,
+  author    = {Ben-Hur, A. and Horn, D. and Siegelmann, H. T. and Vapnik, V.},
+  title     = {Support Vector Clustering},
+  journal   = {Journal of Machine Learning Research},
+  year      = {2001},
+  volume    = {2},
+  pages     = {125-137},
+  owner     = {Vincent},
+  timestamp = {2021.03.06},
+  url       = {https://www.jmlr.org/papers/v2/horn01a.html},
+}
+
 @Article{Benini2011,
   author    = {Benini, S. and Canini, L. and Leonardi, R.},
   title     = {A Connotative Space for Supporting Movie Affective Recommendation},
@@ -3039,6 +3055,18 @@
   owner     = {Vincent},
   timestamp = {2020.07.22},
   url       = {https://www.aclweb.org/anthology/D12-1091/},
+}
+
+@Article{Berhe2019,
+  author    = {Berhe, A. and Barras, C. and Guinaudeau, C.},
+  title     = {Video Scene Segmentation of TV Series Using Multimodal Neural Features},
+  journal   = {Series - International Journal of TV Serial Narratives},
+  year      = {2019},
+  volume    = {5},
+  pages     = {1},
+  doi       = {10.6092/ISSN.2421-454X/8967},
+  owner     = {Vincent},
+  timestamp = {2021.03.06},
 }
 
 @InProceedings{Berhe2020,
@@ -3921,6 +3949,19 @@
   timestamp = {2020.12.19},
 }
 
+@Article{Booth2012,
+  author    = {Booth, P.},
+  title     = {The Television Social Network: Exploring {TV} Characters},
+  journal   = {Communication Studies},
+  year      = {2012},
+  volume    = {63},
+  number    = {3},
+  pages     = {309-327},
+  doi       = {10.1080/10510974.2012.674616},
+  owner     = {Vincent},
+  timestamp = {2021.02.11},
+}
+
 @InProceedings{Bordes2013,
   author    = {Bordes, A. and Usunier, N. and Garcia-Duran, A. and Weston, J. and Yakhnenko, O.},
   title     = {Translating embeddings for modeling multi-relational data},
@@ -4363,6 +4404,19 @@
   doi       = {10.18653/v1/d15-1075},
   owner     = {Vincent},
   timestamp = {2020.12.15},
+}
+
+@Article{boyd2007,
+  author    = {Boyd, D. M. and Ellison, N. B.},
+  title     = {Social Network Sites: Definition, History, and Scholarship},
+  journal   = {Journal of Computer-Mediated Communication},
+  year      = {2007},
+  volume    = {13},
+  number    = {1},
+  pages     = {210-230},
+  doi       = {10.1111/j.1083-6101.2007.00393.x},
+  owner     = {Vincent},
+  timestamp = {2021.03.06},
 }
 
 @Article{Boykov2004,
@@ -5503,6 +5557,19 @@
   doi       = {10.1073/pnas.0335980100},
   owner     = {Vincent},
   timestamp = {2019.04.03},
+}
+
+@Article{Candia2008,
+  author    = {Candia, J. and González, M. C. and Wang, P. and Schoenharl, T. and Madey, G. and Barabási, A.-L.},
+  title     = {Uncovering individual and collective human dynamics from mobile phone records},
+  journal   = {Journal of Physics A},
+  year      = {2008},
+  volume    = {41},
+  number    = {22},
+  pages     = {224015},
+  doi       = {10.1088/1751-8113/41/22/224015},
+  owner     = {Vincent},
+  timestamp = {2021.03.06},
 }
 
 @Article{Canini2013,
@@ -8230,6 +8297,19 @@
   timestamp = {2020.11.30},
 }
 
+@Article{Delvenne2010,
+  author    = {Delvenne, J. C. and Yaliraki, S. N. and Barahona, M.},
+  title     = {Stability of graph communities across time scales},
+  journal   = {Proceedings of the National Academy of Sciences},
+  year      = {2010},
+  volume    = {107},
+  number    = {29},
+  pages     = {12755-12760},
+  doi       = {10.1073/pnas.0903215107},
+  owner     = {Vincent},
+  timestamp = {2010.09.14},
+}
+
 @Article{DelVicario2016,
   author    = {Del Vicario, M. and Bessi, A. and Zollo, F. and Petroni, F. and Scala, A. and Caldarelli, G. and Stanley, H. E. and Quattrociocchi, W.},
   title     = {The spreading of misinformation online},
@@ -9345,6 +9425,18 @@
   doi       = {10.1109/ICDAR.2017.286},
   owner     = {Vincent},
   timestamp = {2019.03.13},
+}
+
+@Electronic{Duong2021,
+  author       = {Duong, N.},
+  month        = {02},
+  year         = {2021},
+  title        = {Interaction graph of 18 main characters in {The Office} {US} using {NetworkX}},
+  howpublished = {\url{https://github.com/duongnosu/The_Office_interactiongraph}},
+  organization = {{GitHub}},
+  url          = {https://github.com/duongnosu/The_Office_interactiongraph},
+  owner        = {Vincent},
+  timestamp    = {2021.02.28},
 }
 
 @InProceedings{Durak2013,
@@ -12026,6 +12118,16 @@
   url       = {https://archive.org/stream/NarrativeDiscourseAnEssayInMethod/NarrativeDiscourse-AnEssayInMethod_djvu.txt},
 }
 
+@Book{Gerdes2015,
+  title     = {Illuminating Dark Networks: The Study of Clandestine Groups and Organizations},
+  publisher = {Cambridge University Press},
+  year      = {2015},
+  author    = {Gerdes, L. M.},
+  doi       = {10.1017/cbo9781316212639},
+  owner     = {Vincent},
+  timestamp = {2020.07.23},
+}
+
 @Article{Gerofsky2019,
   author    = {Gerofsky, S.},
   title     = {Approaching the History of Mathematics via the Performing Arts: Kepler: A 'Renaissance Folk Play' in Verse},
@@ -13405,6 +13507,19 @@
   timestamp = {2010.06.03},
 }
 
+@Article{Guimera2005,
+  author    = {Guimera, R.},
+  title     = {Team Assembly Mechanisms Determine Collaboration Network Structure and Team Performance},
+  journal   = {Science},
+  year      = {2005},
+  volume    = {308},
+  number    = {5722},
+  pages     = {697-702},
+  doi       = {10.1126/science.1106340},
+  owner     = {Vincent},
+  timestamp = {2021.03.06},
+}
+
 @Article{Guimera2005a,
   author    = {Guimerà, R. and Amaral, L. A. N},
   title     = {Functional cartography of complex metabolic networks},
@@ -13746,6 +13861,19 @@
   owner     = {Vincent},
   timestamp = {2020.03.24},
   url       = {https://arxiv.org/abs/1904.11942},
+}
+
+@Article{Han2019c,
+  author    = {Han, Y.},
+  title     = {Jungian Character Network in Growing Other Character Archetypes in Films},
+  journal   = {International Journal of Contents},
+  year      = {2019},
+  volume    = {15},
+  number    = {2},
+  pages     = {13-19},
+  doi       = {10.5392/IJoC.2019.15.2.013},
+  owner     = {Vincent},
+  timestamp = {2021.02.11},
 }
 
 @Article{Hancock2010,
@@ -15209,6 +15337,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://arxiv.org/abs/2007.10937},
 }
 
+@Article{Hubert1985,
+  author    = {Hubert, L. and Arabie, P.},
+  title     = {Comparing partitions},
+  journal   = {Journal of Classification},
+  year      = {1985},
+  volume    = {2},
+  number    = {1},
+  pages     = {193-218},
+  doi       = {10.1007/BF01908075},
+  owner     = {Vincent},
+  timestamp = {2010.06.03},
+}
+
 @Book{Huck2015,
   title     = {What Is Good Writing?},
   publisher = {Oxford University Press},
@@ -15436,6 +15577,20 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1057/9781403981240},
   owner     = {Vincent},
   timestamp = {2020.07.20},
+}
+
+@InCollection{Inoue2018,
+  author    = {Inoue, M. and Yasuhara, R.},
+  title     = {Considering Conversation Scenes in Movie Summarization},
+  booktitle = {Asia Information Retrieval Symposium},
+  publisher = {Springer},
+  year      = {2018},
+  volume    = {11292},
+  series    = {Lecture Notes in Computer Science},
+  pages     = {164-170},
+  doi       = {10.1007/978-3-030-03520-4_16},
+  owner     = {Vincent},
+  timestamp = {2021.03.06},
 }
 
 @InProceedings{Iosif2014,
@@ -17616,6 +17771,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://archive.bridgesmathart.org/2011/bridges2011-579.pdf},
 }
 
+@Book{Kolodziej2019,
+  title     = {High-Performance Modelling and Simulation for Big Data Applications},
+  publisher = {Springer},
+  year      = {2019},
+  author    = {Kołodziej, J. and González-Vélez, H.},
+  volume    = {11400},
+  series    = {Lecture Notes in Computer Science},
+  doi       = {10.1007/978-3-030-16272-6},
+  owner     = {Vincent},
+  timestamp = {2021.03.06},
+}
+
 @Article{Kontoleon2013,
   author    = {Kontoleon, N. and Falzon, L. and Pattison, P.},
   title     = {Algebraic structures for dynamic networks},
@@ -17817,6 +17984,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1130/0091-7613(2003)031<0163:haaats>2.0.co;2},
   owner     = {Vincent},
   timestamp = {2019.04.02},
+}
+
+@Article{Kraft2003a,
+  author    = {Kraft, J. C. and Rapp, G. and Kayan, I. and Luce, J. V.},
+  title     = {Harbor area at ancient Troy: an interdisciplinary approach},
+  journal   = {Geology},
+  year      = {2003},
+  volume    = {31},
+  pages     = {163-166},
+  doi       = {10.1130/0091-7613(2003)031},
+  owner     = {Vincent},
+  timestamp = {2021.03.06},
 }
 
 @Book{Kranz2008,
@@ -18538,6 +18717,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   review    = {arXiv link: http://arxiv.org/abs/0908.1062},
   timestamp = {2010.06.03},
+}
+
+@Article{Lancichinetti2011a,
+  author    = {Lancichinetti, A and Radicchi, F and Ramasco, J. J. and Fortunato, S.},
+  title     = {Finding Statistically Significant Communities in Networks},
+  journal   = {PLoS ONE},
+  year      = {2011},
+  volume    = {6},
+  number    = {4},
+  pages     = {e18961},
+  doi       = {10.1371/journal.pone.0018961},
+  owner     = {Vincent},
+  timestamp = {2011.06.20},
 }
 
 @Book{Landauer2007,
@@ -19319,6 +19511,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url           = {http://ceur-ws.org/Vol-2653/paper2.pdf},
 }
 
+@Article{Lee2021,
+  author    = {Lee, O-J. and You, E.-S. and Kim, J.-T.},
+  title     = {Plot Structure Decomposition in Narrative Multimedia by Analyzing Personalities of Fictional Characters},
+  journal   = {Applied Sciences},
+  year      = {2021},
+  volume    = {11},
+  number    = {4},
+  pages     = {1645},
+  doi       = {10.3390/app11041645},
+  owner     = {Vincent},
+  timestamp = {2021.02.14},
+}
+
 @InCollection{Leerssen2019,
   author    = {Leerssen, J.},
   title     = {National drama and national theatre},
@@ -19797,6 +20002,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://www.cc.gatech.edu/~riedl/pubs/cmn12.pdf},
 }
 
+@Article{Li2012c,
+  author    = {Li, H.-J. and Wang, Y. and Wu, L.-Y. and Zhang, J. and Zhang, X.-S.},
+  title     = {Potts model based on a Markov process computation solves the community structure problem effectively},
+  journal   = {Physical Review E},
+  year      = {2012},
+  volume    = {86},
+  number    = {1},
+  pages     = {016109},
+  doi       = {10.1103/PhysRevE.86.016109},
+  owner     = {Vincent},
+  timestamp = {2012.07.25},
+}
+
 @InProceedings{Li2013,
   author    = {Li, B. A. and Lee-Urban, S. M. Johnston, G. and Riedl, M. O.},
   title     = {Story generation with crowdsourced plot graphs},
@@ -19806,6 +20024,31 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2020.03.16},
   url       = {https://dl.acm.org/doi/10.5555/2891460.2891543},
+}
+
+@Article{Li2013n,
+  author    = {Li, H.-J. and Zhang, X.-S.},
+  title     = {Analysis of stability of community structure across multiple hierarchical levels},
+  journal   = {Europhysics Letters},
+  year      = {2013},
+  volume    = {103},
+  pages     = {58002},
+  doi       = {10.1209/0295-5075/103/58002},
+  owner     = {Vincent},
+  timestamp = {2013.10.22},
+}
+
+@Article{Li2014s,
+  author    = {Li, Hui-Jia and Wang, Hao and Chen, Luonan},
+  title     = {Measuring robustness of community structure in complex networks},
+  journal   = {Europhysics Letters},
+  year      = {2014},
+  volume    = {108},
+  number    = {6},
+  pages     = {68009},
+  doi       = {10.1209/0295-5075/108/68009},
+  owner     = {Vincent},
+  timestamp = {2015.01.18},
 }
 
 @Article{Li2014v,
@@ -19846,7 +20089,20 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.13},
 }
 
-@InProceedings{Li2015b,
+@Article{Li2015b,
+  author    = {Li, Hui-Jia and Daniels, Jasmine J.},
+  title     = {Social significance of community structure: Statistical view},
+  journal   = {Physical Review E},
+  year      = {2015},
+  volume    = {91},
+  number    = {1},
+  pages     = {012801},
+  doi       = {10.1103/PhysRevE.91.012801},
+  owner     = {Vincent},
+  timestamp = {2015.01.11},
+}
+
+@InProceedings{Li2015c,
   author    = {Li, Y. and Yang, X. and Luo, J.},
   title     = {Semantic Video Entity Linking Based on Visual Content and Metadata},
   booktitle = {IEEE International Conference on Computer Vision},
@@ -19888,6 +20144,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.18653/v1/p16-1094},
   owner     = {Vincent},
   timestamp = {2020.01.03},
+}
+
+@Article{Li2016c,
+  author    = {Li, H.-J. and Zhan, B. and Li, A. and Liu, Z. and Shi, Y.},
+  title     = {Fast and accurate mining the community structure: integrating center locating and membership optimization},
+  journal   = {IEEE Transactions on Knowledge and Data Engineering},
+  year      = {2016},
+  volume    = {28},
+  number    = {9},
+  pages     = {2349-2362},
+  doi       = {10.1109/TKDE.2016.2563425},
+  owner     = {Vincent},
+  timestamp = {2016.05.17},
 }
 
 @InProceedings{Li2017,
@@ -20491,6 +20760,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1002/9781118783764.wbieme0092},
   owner     = {Vincent},
   timestamp = {2020.03.13},
+}
+
+@Article{Liu2019,
+  author    = {Liu, C. and Last, M. and Shmilovici, A.},
+  title     = {Identifying turning points in animated cartoons},
+  journal   = {Expert Systems with Applications},
+  year      = {2019},
+  volume    = {123},
+  pages     = {246-255},
+  doi       = {10.1016/j.eswa.2019.01.003},
+  owner     = {Vincent},
+  timestamp = {2021.03.06},
 }
 
 @Article{Liu2020,
@@ -22493,6 +22774,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.01.05},
 }
 
+@Article{Mehta2018,
+  author    = {Mehta, D. and Haque Siddiqui, M. F. and Javaid, A. Y.},
+  title     = {Facial Emotion Recognition: A Survey and Real-World User Experiences in Mixed Reality},
+  journal   = {Sensors},
+  year      = {2018},
+  volume    = {18},
+  number    = {2},
+  pages     = {416},
+  doi       = {10.3390/s18020416},
+  owner     = {Vincent},
+  timestamp = {2021.03.06},
+}
+
 @InProceedings{Mei2007,
   author    = {Mei, T. and Hua, X.-S. and Yang, L. and Li, S.},
   title     = {{VideoSense}: towards effective online video advertising},
@@ -22922,7 +23216,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
 }
 
 @Article{Miranda2013,
-  author    = {Miranda, P. J. and Baptista, M. S. and de S. Pinto, S. E.},
+  author    = {Miranda, P. J. and Silva Baptista, M. and de S. Pinto, S. E.},
   title     = {Analysis of communities in a mythological social network},
   journal   = {arXiv},
   year      = {2013},
@@ -22931,6 +23225,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2013.06.25},
   url       = {http://arxiv.org/abs/1306.2537},
+}
+
+@Article{Miranda2018,
+  author    = {Miranda, P. J. and Silva Baptista, M. and de Souza Pinto, S. E.},
+  title     = {The Odyssey's mythological network},
+  journal   = {PLoS ONE},
+  year      = {2018},
+  volume    = {13},
+  number    = {7},
+  pages     = {e0200703},
+  doi       = {10.1371/journal.pone.0200703},
+  owner     = {Vincent},
+  timestamp = {2021.02.13},
 }
 
 @InCollection{Mische2011,
@@ -27414,6 +27721,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://muse.jhu.edu/article/54196},
 }
 
+@Article{Rand1971,
+  author    = {Rand, W. M.},
+  title     = {Objective Criteria for the Evaluation of Clustering Methods},
+  journal   = {Journal of the American Statistical Association},
+  year      = {1971},
+  volume    = {66},
+  number    = {336},
+  pages     = {846-850},
+  doi       = {10.2307/2284239},
+  owner     = {Vincent},
+  timestamp = {2010.06.03},
+}
+
 @Article{Rand2011,
   author    = {Rand, D. G. and Arbesman, S. and Christakis, N. A.},
   title     = {Dynamic social networks promote cooperation in experiments with humans},
@@ -29234,7 +29554,6 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.4230/OASIcs.CMN.2013.183},
   owner     = {Vincent},
   timestamp = {2016.03.01},
-  url       = {http://drops.dagstuhl.de/opus/volltexte/2013/4161/pdf/p183-sack.pdf},
 }
 
 @InCollection{Sack2014,
@@ -31288,6 +31607,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.03.28},
 }
 
+@Article{Stanoev2011,
+  author    = {Stanoev, A. and Smilkov, D. and Kocarev, L.},
+  title     = {Identifying communities by influence dynamics in social networks},
+  journal   = {Physical Review E},
+  year      = {2011},
+  volume    = {84},
+  number    = {4},
+  pages     = {046102},
+  doi       = {10.1103/physreve.84.046102},
+  owner     = {Vincent},
+  timestamp = {2021.03.06},
+}
+
 @Book{Stark2007,
   title     = {Sociology},
   publisher = {Wadsworth Publishing Company},
@@ -32856,6 +33188,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.09},
 }
 
+@Article{Toivonen2006,
+  author    = {Toivonen, R. and Onnela, J.-P. and Saramäki, J. and Hyvönen, J. and Kaski, K.},
+  title     = {A model for social networks},
+  journal   = {Physica A},
+  year      = {2006},
+  volume    = {371},
+  number    = {2},
+  pages     = {851-860},
+  doi       = {10.1016/j.physa.2006.03.050},
+  owner     = {Vincent},
+  timestamp = {2021.03.06},
+}
+
 @Book{Tolmie2013,
   title     = {Character Studies in the Fourth Gospel, Narrative Approaches to Seventy Figures in John},
   publisher = {Wiliam B. Eerdmans Publishing},
@@ -33117,6 +33462,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1007/978-3-319-61911-8_9},
   owner     = {Vincent},
   timestamp = {2018.10.25},
+}
+
+@Article{Traud2011,
+  author    = {Traud, A. L. and Mucha, P. J. and Porter, M. A.},
+  title     = {Social Structure of Facebook Networks},
+  journal   = {Physica A},
+  year      = {2011},
+  volume    = {391},
+  pages     = {4165-4180},
+  doi       = {10.1016/j.physa.2011.12.021},
+  owner     = {Vincent},
+  timestamp = {2011.07.19},
 }
 
 @Article{Travenolo2008,
@@ -33437,6 +33794,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.01.23},
   url       = {https://www.researchgate.net/profile/Amin_Ullah3/publication/330322377_Actor-based_Movie_Summarization_using_Face_Clustering/links/5c38bb02a6fdccd6b5a48752/Actor-based-Movie-Summarization-using-Face-Clustering.pdf},
+}
+
+@Article{UlHaq2019,
+  author    = {Ul Haq, I. and Muhammad, K. and Hussain, T. and Kwon, S. and Sodanil, M. and Baik, S. W. and Lee, M. Y.},
+  title     = {Movie scene segmentation using object detection and set theory},
+  journal   = {International Journal of Distributed Sensor Networks},
+  year      = {2019},
+  volume    = {15},
+  number    = {6},
+  pages     = {155014771984527},
+  doi       = {10.1177/1550147719845277},
+  owner     = {Vincent},
+  timestamp = {2021.03.06},
 }
 
 @InProceedings{Underwood2013,
@@ -35398,6 +35768,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
 }
 
 @Article{Wu2007a,
+  author    = {Wu, J. and Deng, H. Z. and Tan, Y. J. and Zhu, D. Z.},
+  title     = {Vulnerability of complex networks under intentional attack with incomplete information},
+  journal   = {Journal of Physics A},
+  year      = {2007},
+  volume    = {40},
+  number    = {11},
+  pages     = {2665-2671},
+  doi       = {10.1088/1751-8113/40/11/005},
+  owner     = {Vincent},
+  timestamp = {2010.08.23},
+}
+
+@Article{Wu2007b,
   author    = {Wu, X. and Kumar, V. and Quinlan, J. R. and Ghosh, J. and Yang, Q. and Motoda, H. and McLachlan, G. J. and Ng, A. and Liu, B. and Yu, P. S. and Zhou, Z.-H. and Steinbach, M. and Hand, D. J. and Steinberg, D.},
   title     = {Top 10 algorithms in data mining},
   journal   = {Knowledge and Information Systems},
@@ -36550,6 +36933,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.07.26},
 }
 
+@Article{Zhang2014a,
+  author    = {Zhang, P. and Moore, C.},
+  title     = {Scalable detection of statistically significant communities and hierarchies, using message passing for modularity},
+  journal   = {Proceedings of the National Academy of Sciences},
+  year      = {2014},
+  volume    = {111},
+  number    = {51},
+  pages     = {18144-18149},
+  doi       = {10.1073/pnas.1409770111},
+  owner     = {Vincent},
+  timestamp = {2014.03.31},
+}
+
 @InProceedings{Zhang2015,
   author    = {Zhang, Z. and Luo, P. and Loy, C.-C. and Tang, X.},
   title     = {Learning social relation traits from face images},
@@ -36754,6 +37150,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.08},
 }
 
+@Article{Zhou2003a,
+  author    = {Zhou, H.},
+  title     = {Network landscape from a Brownian particle's perspective},
+  journal   = {Physical Review E},
+  year      = {2003},
+  volume    = {67},
+  number    = {4},
+  pages     = {041908},
+  doi       = {10.1103/PhysRevE.67.041908},
+  owner     = {Vincent},
+  timestamp = {2010.12.26},
+}
+
 @Article{Zhou2004a,
   author    = {Zhou, S. and Mondragon, R. J.},
   title     = {The rich-club phenomenon in the Internet topology},
@@ -36913,6 +37322,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1109/tmm.2005.850977},
   owner     = {Vincent},
   timestamp = {2019.03.28},
+}
+
+@Article{Zhu2009,
+  author    = {Zhu, S. and Liu, Y.},
+  title     = {Automatic scene detection for advanced story retrieval},
+  journal   = {Expert Systems with Applications},
+  year      = {2009},
+  volume    = {36},
+  number    = {3},
+  pages     = {5976-5986},
+  doi       = {10.1016/j.eswa.2008.07.009},
+  owner     = {Vincent},
+  timestamp = {2021.03.06},
 }
 
 @Article{Zhu2012,
